--- a/rc/index.html
+++ b/rc/index.html
@@ -35,12 +35,12 @@
             -o-transition: background-color 2,stransform 2s;;  
         }
         #bg{            
-            height: 68%;
-            width: 68%;
+            height: 72%;
+            width: 72%;
             border-radius: 400px;
             text-align: center;
-            margin-left: 16%;
-            margin-top: 16%;
+            margin-left: 14%;
+            margin-top: 14%;
         }
         .fill{
             width: 100%;
@@ -56,56 +56,59 @@
     </div>    
     <div id="describe">Tap the screen/Press any key to pause <br>Tap/Press again to continue <br>By Parizus</div>
     <div id="r_ring">
-        <?xml version="1.0" encoding="utf-8"?>
-        <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-        <svg version="1.2" baseProfile="tiny" id="图层_1"
-        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 560 559.8"
-        xml:space="preserve">
-        <linearGradient id="XMLID_215_" gradientUnits="userSpaceOnUse" x1="279.9999" y1="14.33" x2="279.9999" y2="494.9999">
-            <stop  offset="0" style="stop-color:#FF0000"/>
-            <stop  offset="9e-002" style="stop-color:#999999"/>
-            <stop  offset="0.5" style="stop-color:#999999"/>
-        </linearGradient>
-        <path id="XMLID_20_" fill="url(#XMLID_215_)" d="M432.4,128.3C395,90.8,346.2,68.8,293.9,65.4c-3.8-0.2-6.9-3.1-7.4-6.8L280,14.3
-        l-6.4,44.3c-0.5,3.8-3.7,6.6-7.4,6.8c-51.2,3.2-99,24.4-136,60.4c-40.4,39.3-63.8,93-65,149.4c-1.3,61.9,23.3,120.1,68.7,162.4
-        c40,37.2,92.9,57.7,147.5,57.3c57-0.3,110.5-22.7,150.8-63c40.2-40.2,62.6-93.6,63-150.4C495.4,224.3,472.8,168.9,432.4,128.3z
-        M275.7,485c-109.9-2.3-199-91.9-200.7-201.8c-1.7-111.5,86.1-203.3,196.1-208c2.9-0.1,5.9-0.2,8.8-0.2s5.9,0.1,8.8,0.2
-        C397.8,79.8,485,169.9,485,280C485,394.5,390.7,487.3,275.7,485z"/>
-        <circle id="XMLID_1_" fill="none" cx="280" cy="280" r="280"/></svg>
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+<svg version="1.2" baseProfile="tiny" id="图层_1"
+     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-428 -107.8 600 600"
+     xml:space="preserve">
+<linearGradient id="XMLID_215_" gradientUnits="userSpaceOnUse" x1="-128" y1="-97.8" x2="-128" y2="432.2">
+    <stop  offset="0" style="stop-color:#FF0000"/>
+    <stop  offset="8e-002" style="stop-color:#999999"/>
+    <stop  offset="0.3" style="stop-color:#999999"/>
+</linearGradient>
+<circle fill="none" cx="-128" cy="192.2" r="300"/>
+<path fill="url(#XMLID_215_)" d="M-116.8-53.1L-128-97.8l-11.2,44.7c-0.8,3.3-3.7,5.8-7.1,6C-271.4-37.7-369.7,67.6-368,195.5
+    c1.7,131,109.3,236.9,240.4,236.7C4.8,432,112,324.6,112,192.2C112,65.8,14.3-37.7-109.7-47.1C-113.1-47.4-116-49.8-116.8-53.1z
+     M-128,402.2c-116,0-210-94-210-210s94-210,210-210s210,94,210,210S-12,402.2-128,402.2z"/>
+</svg>
+
 
     </div>
     <div id="g_ring">
-        <?xml version="1.0" encoding="utf-8"?>
-        <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-        <svg version="1.2" baseProfile="tiny" id="图层_1"
-        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 560 559.8"
-        xml:space="preserve">
-        <linearGradient id="XMLID_216_" gradientUnits="userSpaceOnUse" x1="279.9999" y1="14.33" x2="279.9999" y2="494.9999">
-            <stop  offset="0" style="stop-color:#00FF00"/>
-            <stop  offset="9e-002" style="stop-color:#808080"/>
-            <stop  offset="0.5" style="stop-color:#808080"/>
-        </linearGradient>
-        <path id="XMLID_23_" fill="url(#XMLID_216_)" d="M287.9,68.7L280,14.3l-7.9,54.4c-0.5,3.7-3.6,6.5-7.4,6.8C157.8,83.5,73.4,173.9,75,283.2
-        c1.7,109.9,90.8,199.5,200.7,201.8c115,2.4,209.3-90.5,209.3-205c0-107.9-83.8-196.6-189.7-204.4C291.5,75.3,288.5,72.5,287.9,68.7z
-        M280,475c-107.5,0-195-87.5-195-195c0-104.1,81.9-189.4,184.7-194.7c3.4-0.2,6.8-0.3,10.3-0.3s6.9,0.1,10.3,0.3
-        C393.1,90.6,475,175.9,475,280C475,387.5,387.5,475,280,475z"/>
-        <circle id="XMLID_1_" fill="none" cx="280" cy="280" r="280"/></svg>
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+<svg version="1.2" baseProfile="tiny" id="图层_1"
+     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-428 -107.8 600 600"
+     xml:space="preserve">
+<linearGradient id="XMLID_216_" gradientUnits="userSpaceOnUse" x1="-128" y1="-97.8" x2="-128" y2="432.2">
+    <stop  offset="0" style="stop-color:#00FF00"/>
+    <stop  offset="8e-002" style="stop-color:#808080"/>
+    <stop  offset="0.3" style="stop-color:#808080"/>
+</linearGradient>
+<circle fill="none" cx="-128" cy="192.2" r="300"/>
+<path fill="url(#XMLID_216_)" d="M-114.3-42.9L-128-97.8l-13.7,54.9c-0.8,3.3-3.6,5.7-7,6C-265.2-26.5-356.7,70.8-358,189.6
+    c-1.4,127.1,102.8,232.6,230,232.6c127,0,230-103,230-230c0-120-91.9-218.6-209.2-229.1C-110.6-37.2-113.4-39.6-114.3-42.9z
+     M-128,402.2c-116,0-210-94-210-210s94-210,210-210s210,94,210,210S-12,402.2-128,402.2z"/>
+</svg>
+
 
     </div>
     <div id="b_ring">
+        <?xml version="1.0" encoding="utf-8"?>
         <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
         <svg version="1.2" baseProfile="tiny" id="图层_1"
-        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 560 559.8"
+        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-428 -107.8 600 600"
         xml:space="preserve">
-        <linearGradient id="XMLID_217_" gradientUnits="userSpaceOnUse" x1="279.9999" y1="14.33" x2="279.9999" y2="494.9999">
-            <stop  offset="0" style="stop-color:#0000FF"/>
-            <stop  offset="9e-002" style="stop-color:#666666"/>
-            <stop  offset="0.5" style="stop-color:#666666"/>
-        </linearGradient>
-        <path id="XMLID_29_" fill="url(#XMLID_217_)" d="M289.4,78.9L280,14.3l-9.3,63.8c-0.6,4.1-3.9,7.3-8,7.7C163.2,94.6,85,178.3,85,280.1
-        c0,107.1,87.4,194.6,194.5,194.9C387.2,475.3,475,387.7,475,280c0-101.9-78.6-185.8-178.3-194.3C292.9,85.4,289.9,82.6,289.4,78.9z
-        M280,465c-102,0-185-83-185-185c0-102,83-185,185-185c102,0,185,83,185,185C465,382,382,465,280,465z"/>
-        <circle id="XMLID_1_" fill="none" cx="280" cy="280" r="280"/></svg>
+<linearGradient id="XMLID_217_" gradientUnits="userSpaceOnUse" x1="-128" y1="-97.8" x2="-128" y2="432.2">
+    <stop  offset="0" style="stop-color:#0000FF"/>
+    <stop  offset="8e-002" style="stop-color:#666666"/>
+    <stop  offset="0.3" style="stop-color:#666666"/>
+</linearGradient>
+        <circle fill="none" cx="-128" cy="192.2" r="300"/>
+        <path fill="url(#XMLID_217_)" d="M-111.7-32.6L-128-97.8l-16.3,65.2c-0.8,3.3-3.6,5.7-6.9,6c-126.5,13.3-221.1,133.8-191.2,268.9
+        c18.3,82.8,83.8,147.4,166.7,164.8C-33.4,437.1,92,329.3,92,192.2C92,78.5,5.8-15-104.8-26.6C-108.1-26.9-110.9-29.3-111.7-32.6z
+        M-100.7,400.5c-137.4,17.3-252.9-98.2-235.6-235.6c11.9-94.3,86.6-169.1,181-181C-17.9-33.4,97.6,82.1,80.3,219.5
+        C68.4,313.8-6.4,388.6-100.7,400.5z"/></svg>
 
     </div>
     <div class="fill" style="background: linear-gradient(120deg, #999999 0%, #e6e6e6 80%); height: 100%; position: fixed; top: 0px; z-index: -8; padding: 0px;"></div>
